# mpqfs

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  test_mpqfs
.github/workflows/: ci.yml
cmake/: mpqfsConfig.cmake.in
include/mpqfs/: mpqfs.h
src/: mpq_archive.c  mpq_archive.h  mpq_crypto.c  mpq_crypto.h  mpq_error.c  mpq_explode.h  mpq_fopen.c  mpq_fopen.h  mpq_implode.h  mpq_pkware.c  mpq_platform.h  mpq_sdl.c  mpq_stream.c  mpq_stream.h  mpq_stream_api.c  mpq_writer.c  mpq_writer.h
tests/: test_mpqfs.c
